Changes on 06/21/23 Replaced standard alerts for user finding a treasure with snackbar alerts. They pop up from bottom of screen and fade away after a couple of seconds; improves game flow and aesthetics. The medium treasure has been renamed from "umbrella" to "golfclubs". Column class elements are no longer selectable by user, which prevents the hidden "." in each grid square from being highlighted during gameplay. Contrast between text and background is improved for better accessibility. Buttons are bigger for easier selection, but more work is needed on styling.

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 h1  {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 300%;
-    color:darkgoldenrod;
+    color:saddlebrown;
     font-weight: bold;
     text-transform: uppercase;
     padding-left: 5%;
@@ -65,6 +65,7 @@ h1  {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: peru;
     cursor: pointer;
+    user-select: none;
     }
 
 .column:hover {
@@ -172,22 +173,25 @@ input:checked + .slider:before {
     }
 
 button {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: medium;
     background-color: peru;
     border-radius: 10px;
     box-shadow: 5px 5px 15px rgba(0,0,0,.3);
     cursor: pointer;
+    padding: 1%;
     }
 
 p   {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
      font-size: 300%;
-     color: darkgoldenrod;
+     color: saddlebrown;
      text-align: center;
 
     }
 
 p2  {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 150%;
-        color:darkgoldenrod;
+        color:saddlebrown;
         font-weight: bold;
         text-transform: uppercase;
         padding-left: 5%;
@@ -225,7 +229,7 @@ div {
 h2  {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 70%;
-    color:darkgoldenrod;
+    color:saddlebrown;
     font-weight: bold;
     text-transform: uppercase;
     padding-left: 5%;
@@ -249,7 +253,7 @@ h2  {
 h3  {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 200%;
-    color:darkgoldenrod;
+    color:saddlebrown;
     font-weight: bold;
     text-transform: uppercase;
     padding-left: 5%;
@@ -260,7 +264,7 @@ h3  {
 h4 {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 200%;
-    color:darkgoldenrod;
+    color:saddlebrown;
     font-weight: bold;
     text-transform: uppercase;
     padding-left: 5%;
@@ -280,23 +284,125 @@ h4 {
     text-align: center; 
     margin: auto;
     font-weight: bold;
-    font-size: 50%;
+    font-size: 40%;
     text-transform: uppercase;
     align-content: center;
     border-style:hidden;
     border-radius: 10px;
     box-shadow: 5px 5px 15px rgba(0,0,0,.3);
-    clear: both
+    clear: both;
+    padding: 2px;
     }
 
 #credit a:hover {
-    color: blue
+    color: rgb(255, 0, 221)
     }
 
 a {
     text-decoration: none;
     }
-        
+    
 
+#snackbarChest {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: large;
+    visibility: hidden;
+    width: 50%;
+    background-color: #87fd91;
+    color: #000000;
+    text-align: center; 
+    border-style: solid;
+    border-color: green;
+    border-radius: 10px; 
+    padding: 10px;
+    position: fixed;
+    z-index: 1;
+    left: 23%;
+    bottom: 70px;
+    align-content: center;
+  }
+        
+#snackbarChest.show {
+    visibility: visible;
+    /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+    However, delay the fade out process for 2.5 seconds */
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  }
+
+#snackbarGolfClubs {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: large;
+    visibility: hidden;
+    width: 50%;
+    background-color: #87fd91;
+    color: #000000;
+    text-align: center; 
+    border-style: solid;
+    border-color: green;
+    border-radius: 10px; 
+    padding: 10px;
+    position: fixed;
+    z-index: 1;
+    left: 23%;
+    bottom: 70px;
+    align-content: center;
+  }
+        
+#snackbarGolfClubs.show {
+    visibility: visible;
+    /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+    However, delay the fade out process for 2.5 seconds */
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  }
+
+  #snackbarSurfboard {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: large;
+    visibility: hidden;
+    width: 50%;
+    background-color: #87fd91;
+    color: #000000;
+    text-align: center; 
+    border-style: solid;
+    border-color: green;
+    border-radius: 10px; 
+    padding: 10px;
+    position: fixed;
+    z-index: 1;
+    left: 23%;
+    bottom: 70px;
+    align-content: center;
+  }
+        
+#snackbarSurfboard.show {
+    visibility: visible;
+    /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+    However, delay the fade out process for 2.5 seconds */
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  }
+  
+/* Animations to fade the snackbar in and out */
+@-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 70px; opacity: 1;}
+  }
+  
+@keyframes fadein {
+from {bottom: 0; opacity: 0;}
+    to {bottom: 70px; opacity: 1;}
+  }
+  
+@-webkit-keyframes fadeout {
+    from {bottom: 70px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+  }
+  
+@keyframes fadeout {
+    from {bottom: 70px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+  }
 
 
